# ReFast

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: sync-version.js
src/: App.tsx  CalculatorPadApp.tsx  HotkeySettingsApp.tsx  LauncherApp.tsx  SettingsApp.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_search.rs  commands.rs  error.rs  everything_search.rs  file_history.rs  hotkey.rs  hotkey_handler.rs  main.rs  open_history.rs  recording.rs  replay.rs  settings.rs  system_folders_search.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src/api/: tauri.ts
src/components/: AppCenterContent.tsx  CalculatorPadWindow.tsx  EverythingSearchWindow.tsx  HotkeySettings.tsx  JsonFormatterWindow.tsx  LauncherWindow.tsx  MemoModal.tsx  MemoWindow.tsx  PlaybackControls.tsx  PluginListWindow.tsx  RecordControls.tsx  RecordingList.tsx  ResultIcon.tsx  SettingsPages.tsx  StatusBar.tsx  TranslationWindow.tsx
src/plugins/: index.ts  loader.ts  registry.ts
src/plugins/builtin/: index.ts
src/plugins/builtin/calculator_pad/: index.ts
src/plugins/builtin/everything_search/: manifest.json
src/plugins/builtin/translation/: index.ts  manifest.json
src/types/: index.ts
src/utils/: launcherHandlers.ts  launcherUtils.ts  platform.ts  resultUtils.ts  windowUtils.ts
